Add function remove Car

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
               <th>Placa</th>
               <th>Ano</th>
               <th>Cor</th>
+              <th>Ações</th>
             </tr>
           </thead>
           <tbody data-js="bodyTable"></tbody>
