--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title data-js="companyNameTitle"></title>
+    <title>DLCar</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M"
       crossorigin="anonymous">
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
@@ -82,6 +82,6 @@
       crossorigin="anonymous"></script>
     <script src="https://use.fontawesome.com/b7ce5ee967.js"></script>
     <script src="js/dom.js"></script>
-    <script src="js/app.js"></script>
+    <script src="js/sisCar.js"></script>
   </body>
 </html>
